--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>7mdapps</title>
+    <title>S.Alshehhi</title>
     <link rel="stylesheet" href="css/v2.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
