--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="package-grid-item inline-block section-body w-full flex-grow justify-between">
             <div class="w-full flex items-center justify-between p-3 alternate-background">
                 <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
-                    <div style="max-width: calc(100% - 1.6rem);" class="flex-grow mr-2">
+                    <div style="max-width: calc(100%);" class="flex-grow mr-2">
                         <div class="text-base font-semibold text-grey-dark truncate pb-1/2">
                       الإثبات والمعاملات المدنية والتجارية
                         </div>
@@ -128,7 +128,7 @@
         <div class="package-grid-item inline-block section-body w-full flex-grow justify-between">
             <div class="w-full flex items-center justify-between p-3 alternate-background">
                 <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
-                    <div style="max-width: calc(100% - 2.5rem);" class="flex-grow mr-2">
+                    <div style="max-width: calc(100%);" class="flex-grow mr-2">
                         <div class="text-base font-semibold text-grey-dark truncate pb-1/2">
             مرسوم في شأن السلطة القضائية
                         </div>
@@ -142,7 +142,7 @@
         <div class="package-grid-item inline-block section-body w-full flex-grow justify-between">
             <div class="w-full flex items-center justify-between p-3 alternate-background">
                 <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
-                    <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
+                    <div style="max-width: calc(100%);" class="flex-grow mr-2">
                         <div class="text-base font-semibold text-grey-dark truncate pb-1/2">
         مرسوم في شأن تنظيم المحاماة
                         </div>
